--- a/templates/index.html
+++ b/templates/index.html
@@ -337,7 +337,7 @@
             </div>
             <div class="contact-item">
               <div class="contaus">
-                  <a rel="nofollow" href="tel:0100200340" class="item-link">
+                <a href="https://www.instagram.com/patheracoaching/" class="item-link">
                   <i class="fas fa-2x fa-phone-square mr-4"></i>
                   <span class="mb-0">Instagram</span>
                   </a>
