--- a/templates/index.html
+++ b/templates/index.html
@@ -90,7 +90,7 @@
             
             <div class="row tm-content-box"><!-- second row -->
         		<div class="col-lg-1">
-                    <i class="far fa-3x fa-chart-bar text-center tm-icon" style="color:black;"></i>
+                    <i class="fas fa-handshake fa-3x" style="color:black;"></i>
                 </div>
                 <div class="col-lg-5">
                     <div class="tm-intro-text-container">
@@ -115,7 +115,7 @@
             
             <div class="row tm-content-box"><!-- third row -->
         		<div class="col-lg-1">
-                    <i class="fas fa-3x fa-fingerprint text-center tm-icon" style="color:black;"></i>
+                    <i class="fas fa-route fa-3x" style="color:black;"></i>
                 </div>
                 <div class="col-lg-5">
                     <div class="tm-intro-text-container">
@@ -130,7 +130,7 @@
                 </div>
                 
                 <div class="col-lg-1">
-                    <i class="fas fa-3x fa-users text-center tm-icon" style="color:black;"></i>
+                    <i class="fas fa-book fa-3x " style="color:black;"></i>
                 </div>
                 <div class="col-lg-5">
                     <div class="tm-intro-text-container">
@@ -330,7 +330,7 @@
             <div class="contact-item">
               <div class="contaus">
                 <a rel="nofollow" href="https://wa.me/41765336444" class="item-link">
-                <i class="far fa-2x fa-comment mr-4"></i>
+                <i class="fab fa-whatsapp fa-2x mr-4"></i>
                 <span class="mb-0">Whatsapp</span>
                 </a>
               </div>
@@ -338,7 +338,7 @@
             <div class="contact-item">
               <div class="contaus">
                 <a href="https://www.instagram.com/patheracoaching/" class="item-link">
-                  <i class="fas fa-2x fa-phone-square mr-4"></i>
+                  <i class="fab fa-instagram fa-2x mr-4"></i>
                   <span class="mb-0">Instagram</span>
                   </a>
               </div>
@@ -347,11 +347,7 @@
           </div>
         </div>
       </div>
-      <footer class="text-center small tm-footer">
-        <p class="mb-0">
-          <a rel="nofollow" href="https://www.tooplate.com" title="HTML templates"></a>
-        </p>
-      </footer>
+
       <div class="formreg">
         <form action="/submit_registration" method="POST" id="registrationForm">
           <!-- Persönliche Angaben -->
@@ -465,10 +461,31 @@
         </form>
       </div>
   </div>
-  <div class="col-sm-12 col-md-6">
-    <div id="registrationForm2">
-
+  <div class="col-sm-12 col-md-6"></div>
+    <div id="registrationForm2"></div>
+    <footer>
+      <hr class="border-top">
+      <div class="container">
+          <div class="row">
+              <div class="col-lg-12">
+                  <p class="mb-3 text-left">Pathera Coaching</p>
+                  <a rel="nofollow" href="https://wa.me/41765336444" class="item-link text-left">
+                      <i class="fab fa-whatsapp fa-2x mr-4"></i>
+                      <span class="mb-0">+41 76 533 64 44</span>
+                  </a>
+                  <a href="https://www.instagram.com/patheracoaching/" class="item-link text-left">
+                      <i class="fab fa-instagram fa-2x mr-4"></i>
+                      <span class="mb-0">patheracoaching</span>
+                  </a>
+              </div>
+          </div>
+      </div>
+  </footer>
+  
+  
+  
     </section>
+
     <script src="{{ url_for('static', filename='js/jquery-1.9.1.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/slick/slick.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/magnific-popup/jquery.magnific-popup.min.js') }}"></script>
