--- a/static/css/tooplate-infinite-loop.css
+++ b/static/css/tooplate-infinite-loop.css
@@ -33,6 +33,7 @@ a:focus {
 
 .btn {
   padding: 8px 32px;
+  background-color: #D7ba89;
 }
 
 .btn:hover {
@@ -353,7 +354,7 @@ blockquote {
 .slick-dots li button:focus:before,
 .slick-dots li.slick-active button:before {
   opacity: 1;
-  color: #3ba0dd;
+  color: #D7ba89;
 }
 
 .tm-testimonials-carousel .slick-dots li button:before {
@@ -378,7 +379,7 @@ blockquote {
   position: relative;
   float: left;
   overflow: hidden;
-  background: #3085a3;
+  background: #D7ba89;
   text-align: center;
   cursor: pointer;
 }
@@ -469,7 +470,7 @@ figure.effect-honey figcaption::before {
   left: 0;
   width: 100%;
   height: 10px;
-  background: #38C;
+  background: #D7ba89;
   content: "";
   -webkit-transform: translate3d(0, 10px, 0);
   transform: translate3d(0, 10px, 0);
@@ -548,7 +549,7 @@ figure.effect-honey:hover h2 i {
 
 .item-link:hover i,
 .item-link:hover span {
-  color: #3496d8;
+  color: #D7ba89;
 }
 
 .tm-input {
@@ -564,7 +565,7 @@ figure.effect-honey:hover h2 i {
 .tm-btn-submit {
 	font-size: 0.9em;
 	color: #fff;
-	background-color: #369;
+	background-color: #D7ba89;
 	width: 50%;
 	margin-bottom: 60px;
 }
@@ -918,11 +919,11 @@ input[type="range"]::-moz-range-thumb {
 }
 
 input:checked + .slider {
-  background-color: #2196F3;
+  background-color: #D7ba89;
 }
 
 input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
+  box-shadow: 0 0 1px #D7ba89;
 }
 
 input:checked + .slider:before {
@@ -942,7 +943,7 @@ input:checked + .slider:before {
   font-size: 20px; /* 1 */
   height: 1em;
   width: 2em;
-  background: #3440eb;
+  background: #D7ba89;
   border-radius: 1em;
 }
 
@@ -1085,11 +1086,12 @@ select#zielart option {
 .formreg .tm-btn-submit {
   margin-top: 20px;
   margin-bottom: 60px;
+  background-color: #D7ba89;
 }
 
 .formreg .tm-btn-submit:hover {
   color: #fff;
-  background-color: #38B;
+  background-color: #D7ba89;
 }
 
 .formreg p {
