--- a/templates/index.html
+++ b/templates/index.html
@@ -451,8 +451,10 @@
           <label for="ziel">Dein Ziel und optional ein Bild deines Ziels</label>
           <textarea type="text" id="ziel" name="ziel" rows="4" class="tm-input" required></textarea>
           <br>
-          <label for="imageidol" >Bilder auswählen: --></label>
+          <!-- 
+          <label for="imageidol" >Bilder auswählen: </label>
           <input type="file" id="imageidol" name="imageidol" accept="image/*" multiple required/><br>          
+          -->
           <!-- Sonstiges -->
           <br>
           <label for="bemerkung">Sonstiges/Bemerkungen</label>
