--- a/templates/index.html
+++ b/templates/index.html
@@ -459,7 +459,7 @@
           <br>
           <label for="bemerkung">Sonstiges/Bemerkungen</label>
           <textarea type="text" id="bemerkung" name="bemerkung" rows="8" class="tm-input" required></textarea>
-          <button type="submit" class="btn tm-btn-submit mx-auto d-block" style="width: 10%;" id="registrationSubmitButton">Senden</button>
+          <button type="submit" class="btn btn-block tm-btn-submit mx-auto" id="registrationSubmitButton">Senden</button>
         </form>
       </div>
   </div>
